--- a/index.html
+++ b/index.html
@@ -20,5 +20,22 @@
             <p class="intro__text">This is Sachin. <br><br> He is a passionate about learning new Technologies, React.js, reading Novels and Cricket. </p>
         </div>
     </header>
+    <div class="projects">
+        <h1 class="project__title">
+            Projects
+        </h1>
+        <div class="project left project__one">
+            <img/>
+            <p>This is description of the project</p>
+        </div>
+        <div class="project right project__two">
+            <img/>
+            <p>This is description of the project</p>
+        </div>
+        <div class="project left project__three">
+            <img/>
+            <p>This is description of the project</p>
+        </div>
+    </div>
 </body>
 </html>
