--- a/index.html
+++ b/index.html
@@ -20,22 +20,29 @@
             <p class="intro__text">This is Sachin. <br><br> He is a passionate about learning new Technologies, React.js, reading Novels and Cricket. </p>
         </div>
     </header>
-    <div class="projects">
-        <h1 class="project__title">
+
+    <div class="projects__section">
+        <h1 class="project__header">
             Projects
         </h1>
-        <div class="project left project__one">
-            <img/>
-            <p>This is description of the project</p>
+
+        <div class="project left ">
+            <img class='project__image' src="./profile_pic.jpg" />
+            <div class="project__info">
+                <h2 class="project__title">Title</h2>
+                <p>This is description of the project</p>
+            </div> 
         </div>
-        <div class="project right project__two">
-            <img/>
-            <p>This is description of the project</p>
+        <div class="project right ">
+            <img class='project__image' src="./profile_pic.jpg" />
+            <div class="project__info">
+                <h2 class="project__title">Title</h2>
+                <p>This is description of the project</p>
+            </div> 
         </div>
-        <div class="project left project__three">
-            <img/>
-            <p>This is description of the project</p>
-        </div>
+
+        
+       
     </div>
 </body>
 </html>
