--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
         </h1>
 
         <div class="project left ">
-            <img class='project__image' src="./project/movie_rater.png" />
+            <img class='project__image' src="./project/movie_rater.jpg" />
             <div class="project__info">
                 <h2 class="project__title">Movie Rater</h2>
                 <p>A React app which shows popular, trending and latest Moives and Tv Shows. Users can search and rate movies.</p>
             </div> 
         </div>
         <div class="project right ">
-            <img class='project__image' src="./project/rest_countries.png" />
+            <img class='project__image' src="./project/rest_countries.jpg" />
             <div class="project__info">
                 <h2 class="project__title">Rest Countries</h2>
                 <p>React app which uses restcounties api to fetch details about various countries and display them in an elegant way.</p>
             </div> 
         </div>
         <div class="project left ">
-            <img class='project__image' src="./project/background_generator.png" />
+            <img class='project__image' src="./project/background_generator.jpg" />
             <div class="project__info">
                 <h2 class="project__title">Background Generator</h2>
                 <p>A live background generator which display current background hex for easy copy and use.</p>
             </div> 
         </div>
         <div class="project right ">
-            <img class='project__image' src="./project/image_gallery.png" />
+            <img class='project__image' src="./project/image_gallery.jpg" />
             <div class="project__info">
                 <h2 class="project__title">Image Gallery</h2>
                 <p>Image gallery made using flexbox.</p>
