--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Faster+One&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Heebo&display=swap" rel="stylesheet"> 
     
 </head>
 <body>
