adding links in the social section

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         <div class=footer__container>
             <a href=#top class=back-to-top><i class="fa fa-angle-up fa-1x fa-inverse" aria-hidden=true></i></a>
             <div class=social-links>
-                <a href=#! target=_blank><i class="fab fa-twitter fa-inverse"></i></a>
-                <a href=#! target=_blank><i class="fab fa-codepen fa-inverse"></i></a>
-                <a href=#! target=_blank><i class="fab fa-linkedin fa-inverse"></i></a>
-                <a href=#! target=_blank><i class="fab fa-github fa-inverse"></i></a>
+                <a href="https://github.com/sachinnegi" target=_blank><i class="fab fa-github fa-inverse"></i></a>
+                <a href="https://www.linkedin.com/in/sachin-negi-90927a170/" target=_blank><i class="fab fa-linkedin fa-inverse"></i></a>
+                <a href="https://steamcommunity.com/id/28232199/" target=_blank><i class="fab fab fa-steam fa-inverse"></i></a>
+                <a href="https://twitter.com/SachinSinghNe17" target=_blank><i class="fab fa-twitter fa-inverse"></i></a>
                 
             </div>
             <hr class="footer__hr">
