adding resume option

--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
         
         <div class='intro'>
             <p class="big__text"><span class="welcome">Welcome</span> ! स्वागत हे</p>
-            <p class="intro__text">This is Sachin. <br><br> He is a passionate about learning new Technologies, React.js, reading Novels and Cricket. </p>
+            <p class="intro__text">
+                This is Sachin. &nbsp; &nbsp;
+                <span id="outer button_outer_resume">
+                    <a target="_blank" href="https://drive.google.com/file/d/1uSBNenv5OXKkCikFQsRJ6bJp8nvtLAGm/view?usp=sharing">
+                         <span class="button__resume button_slide slide_right">View Resume</span>
+                    </a>
+                </span>
+                <br><br> He is a passionate about learning new Technologies,reading Novels and playing Cricket. 
+            </p>
         </div>
+       
     </header>
 
     <div class="projects__section">
@@ -60,7 +69,7 @@
             <img class='project__image' src="./project/background_generator.jpg" />
             <div class="project__info">
                 <h2 class="project__title">Background Generator</h2>
-                <p>A live background generator which display current background hex for easy copy and use.</p>
+                <p>A live background generator which display current background linear gradient hex for easy copy and use.</p>
                 <div id="outer">
                     <a target="_blank" href="https://sachinnegi.github.io/background_generator/"> <div class="button_slide slide_right">See Live</div></a>
                     <a target="_blank" href="https://github.com/sachinnegi/background_generator"> <span class = "button__span ">Source Code</span> </a>
