--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="photo" src='./profile_pic.jpg' />
         
         <div class='intro'>
-            <p class="big__text"><span class="welcome">Welcome</span> ! स्वागत हे</p>
+            <p class="big__text"><span class="welcome">Welcome</span> ! स्वागत</p>
             <p class="intro__text">
                 This is Sachin. &nbsp; &nbsp;
                 <span id="outer button_outer_resume">
